@@ -386,31 +386,6 @@ SCIP_RETCODE SCIPunfixParam(
    return SCIP_OKAY;
 }
 
-/** changes the value of an existing parameter
- *
- *  @return \ref SCIP_OKAY is returned if everything worked. Otherwise a suitable error code is passed. See \ref
- *          SCIP_Retcode "SCIP_RETCODE" for a complete list of error codes.
- *
- *  @attention This function is not working the way one would probably expect.
- *             Even if one finds out how to pass the parameter value via the void* argument, the function will fail
- *             to correctly set negative or fractional parameter values.
- *
- *  @deprecated Use SCIPsetBoolParam, SCIPsetIntParam, SCIPsetRealParam, etc., instead
- */
-SCIP_RETCODE SCIPsetParam(
-   SCIP*                 scip,               /**< SCIP data structure */
-   const char*           name,               /**< name of the parameter */
-   void*                 value               /**< new value of the parameter */
-   )
-{
-   assert(scip != NULL);
-   assert(scip->set != NULL);
-
-   SCIP_CALL( SCIPsetSetParam(scip->set, scip->messagehdlr, name, value) );
-
-   return SCIP_OKAY;
-}
-
 /** changes the value of an existing SCIP_Bool parameter
  *
  *  @return \ref SCIP_OKAY is returned if everything worked. Otherwise a suitable error code is passed. See \ref
