@@ -3107,21 +3107,6 @@ SCIP_RETCODE SCIPsetChgParamFixed(
    return SCIP_OKAY;
 }
 
-/** changes the value of an existing parameter */
-SCIP_RETCODE SCIPsetSetParam(
-   SCIP_SET*             set,                /**< global SCIP settings */
-   SCIP_MESSAGEHDLR*     messagehdlr,        /**< message handler */
-   const char*           name,               /**< name of the parameter */
-   void*                 value               /**< new value of the parameter */
-   )
-{
-   assert(set != NULL);
-
-   SCIP_CALL( SCIPparamsetSet(set->paramset, set, messagehdlr, name, value) );
-
-   return SCIP_OKAY;
-}
-
 /** changes the value of an existing SCIP_Bool parameter */
 SCIP_RETCODE SCIPsetChgBoolParam(
    SCIP_SET*             set,                /**< global SCIP settings */
